@@ -1,0 +1,2 @@
+DELETE FROM `tradeskill_recipe_entries` WHERE `salvagecount`>0 AND `componentcount`='0';
+
